# utils

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: repeat.h
include/stream/: input_stream.h  input_stream_buffer.h  input_stream_memory.h  input_stream_type.h  stream_type.h
include/stream/input/: input_stream.h  input_stream_buffer.h  input_stream_memory.h  input_stream_type.h
include/stream/output/: output_stream.h  output_stream_buffer.h  output_stream_memory.h  output_stream_type.h
src/: CMakeLists.txt
src/stream/: input_stream.c  input_stream_buffer.c  input_stream_memory.c  input_stream_type.c  stream_type.c
src/stream/input/: input_stream_buffer.c  input_stream_memory.c  input_stream_type.c
src/stream/output/: output_stream_buffer.c  output_stream_memory.c  output_stream_type.c
test/: CMakeLists.txt
test/include/: utils_test.hpp
test/src/: utils_test.cpp
test/src/stream/: stream_type.cpp  stream_type_test.cpp
test/src/stream/input/: input_stream_type_test.cpp
